infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata: 
    name: posts-srv 
spec: 
  type: NodePort
  selector: 
     app: posts 
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
